--- a/CodeHubDesktop/CodeHubDesktop.csproj
+++ b/CodeHubDesktop/CodeHubDesktop.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <AssemblyName>CodeHubDesktop</AssemblyName>
     <RootNamespace>CodeHubDesktop</RootNamespace>
@@ -12,6 +12,8 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <LangVersion>latest</LangVersion>
     <SatelliteResourceLanguages>en;fa;en-US;fa-IR</SatelliteResourceLanguages>
+    <ApplicationIcon>gitbanner_6jm_icon.ico</ApplicationIcon>
+    <Authors>Mahdi Hosseini</Authors>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;Core</DefineConstants>
@@ -28,6 +30,7 @@
   <ItemGroup>
     <PackageReference Include="AvalonEdit" Version="6.0.1" />
     <PackageReference Include="HandyControls" Version="2.4.9.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.3" />
     <PackageReference Include="ModernWpfUI.MahApps" Version="0.8.2-preview.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Prism.DryIoc" Version="7.2.0.1422" />
